get rid of Java 9+ features